 - fixes and improvements to the Negotiate auth implementation
 - handle proxies which send a 401 auth challenge to a CONNECT request
 - XML: handle the UTF-8 BOM even if the underlying parser does not
 - Win32: Fix timezone handling (Jiang Lei)
 - ne_lock_refresh() works and will update timeout of passed-in lock
 - persistent connection timeout handling fixes for CygWin et al
* New platform-specific features:
 - Win32: Negotiate/NTLM support using SSPI (Vladimir Berezniker)
 - Win32: Add IPv6 support using ENABLE_IPV6 neon.mak flag (Kai Sommerfeld)
* Removed features:
 - the cookies interface has been removed
 - removed functions: ne_service_lookup(), ne_put_if_unmodified()
 - "qop=auth-int" support removed from Digest auth implementation
* Default XML parser search changed to check for expat before libxml2.

Changes in release 0.24.7:
* Compression interface fixes:
 - fix issues handling content decoding and request retries from
 authentication challenges (Justin Erenkrantz)
 - fix places where reader callback would receive spurious size=0 calls
 - fix to pass user-supplied userdata to user-supplied acceptance callback
* Fix for RFC2617-style digest authentication (Hideaki Takahashi).
* Fix to pick up gethostbyname() on QNX 6.2.

Changes in release 0.24.6:
* SECURITY (CVE CAN-2004-0398): Fix sscanf overflow in ne_rfc1036_parse,
 thanks to Stefan Esser.
* Link libneon against libexpat during Subversion build using bundled neon.
* Win32 build script update (Jon Foster).

Changes in release 0.24.5:
* SECURITY (CVE CAN-2004-0179): Fix format string vulnerabilities in
 XML/207 response handling, reported by greuff@void.at.
* Performance fix: avoid seeding the SSL PRNG if not creating an SSL socket.
* ne_ssl_readable_dname() is now defined to return UTF-8 strings.
* Fix case where gssapi/gssapi_generic.h was included but not present.
* Fix ne_utils.c build on platforms where zlib does "#define const".
* Fix use of ne_proppatch_operation with some C++ compilers.