@@ -171,7 +171,7 @@ struct ne_request_s {
         ne_off_t progress; /* number of bytes read of response */
     } resp;
     
-    struct hook *private;
+    struct hook *private, *pre_send_hooks;
 
     /* response header fields */
     struct field *response_headers[HH_HASHSIZE];
@@ -320,6 +320,12 @@ void ne_hook_destroy_session(ne_session *sess,
 			     ne_destroy_sess_fn fn, void *userdata)
 {
     ADD_HOOK(sess->destroy_sess_hooks, fn, userdata);
+}
+
+/* Hack to fix ne_compress layer problems */
+void ne__reqhook_pre_send(ne_request *req, ne_pre_send_fn fn, void *userdata)
+{
+    ADD_HOOK(req->pre_send_hooks, fn, userdata);
 }
 
 void ne_set_session_private(ne_session *sess, const char *id, void *userdata)
@@ -734,6 +740,10 @@ void ne_request_destroy(ne_request *req)
 	next_hk = hk->next;
 	ne_free(hk);
     }
+    for (hk = req->pre_send_hooks; hk; hk = next_hk) {
+	next_hk = hk->next;
+	ne_free(hk);
+    }
 
     if (req->status.reason_phrase)
 	ne_free(req->status.reason_phrase);
@@ -884,6 +894,10 @@ static ne_buffer *build_request(ne_request *req)
 
     NE_DEBUG(NE_DBG_HTTP, "Running pre_send hooks\n");
     for (hk = req->session->pre_send_hooks; hk!=NULL; hk = hk->next) {
+	ne_pre_send_fn fn = (ne_pre_send_fn)hk->fn;
+	fn(req, hk->userdata, buf);
+    }
+    for (hk = req->pre_send_hooks; hk!=NULL; hk = hk->next) {
 	ne_pre_send_fn fn = (ne_pre_send_fn)hk->fn;
 	fn(req, hk->userdata, buf);
     }
